# MGCodeDetector

./: CMakeLists.txt  README.md
Google_tests/: CMakeLists.txt  InvalidGCodeParser.cpp
Google_tests/gcode-file-reader/: GCodeFileReader.cpp
Google_tests/malicious-gcode-detector/temp/: M104_M109.cpp
Google_tests/malicious-gcode-detector/temp/M104_M109/: M104_M109.cpp
Google_tests/malicious-gcode-detector/temp/M106/: M106.cpp
Google_tests/malicious-gcode-detector/temp/M107/: M107.cpp
Google_tests/malicious-gcode-detector/temp/M140/: M140.cpp
Google_tests/malicious-gcode-detector/temp/M141/: M141.cpp
Google_tests/malicious-gcode-detector/temp/M143_M193/: M143_M193.cpp
Google_tests/malicious-gcode-detector/temp/M190/: M190.cpp
Google_tests/malicious-gcode-detector/temp/M191/: M191.cpp
Google_tests/malicious-gcode-detector/temp/M303/: M303.cpp
Google_tests/malicious-gcode-detector/temp/M306/: M306.cpp
Google_tests/malicious-gcode-detector/temp/M710/: M710.cpp
files/gcode/benign/: benign_gcode_1.gcode  benign_gcode_10.gcode  benign_gcode_11.gcode  benign_gcode_12.gcode  benign_gcode_13.gcode  benign_gcode_15.gcode  benign_gcode_17.gcode  benign_gcode_18.gcode  benign_gcode_19.gcode  benign_gcode_2.gcode  benign_gcode_20.gcode  benign_gcode_3.gcode  benign_gcode_4.gcode  benign_gcode_5.gcode  benign_gcode_7.gcode  benign_gcode_8.gcode  benign_gcode_9.gcode  benign_gcode_mixed_1.gcode  benign_gcode_mixed_10.gcode  benign_gcode_mixed_11.gcode  benign_gcode_mixed_12.gcode  benign_gcode_mixed_13.gcode  benign_gcode_mixed_14.gcode  benign_gcode_mixed_15.gcode  benign_gcode_mixed_16.gcode  benign_gcode_mixed_17.gcode  benign_gcode_mixed_18.gcode  benign_gcode_mixed_19.gcode  benign_gcode_mixed_2.gcode  benign_gcode_mixed_20.gcode  benign_gcode_mixed_3.gcode  benign_gcode_mixed_4.gcode  benign_gcode_mixed_5.gcode  benign_gcode_mixed_6.gcode  benign_gcode_mixed_7.gcode  benign_gcode_mixed_8.gcode  benign_gcode_mixed_9.gcode
files/gcode/invalid/: invalid-marlin-gcodes.gcode
files/gcode/malicious/: malicious_01.gcode  malicious_02.gcode  malicious_03.gcode  malicious_04.gcode  malicious_05.gcode  malicious_06.gcode  malicious_07.gcode  malicious_08.gcode  malicious_09.gcode  malicious_10.gcode  malicious_gcode_11.gcode  malicious_gcode_12.gcode  malicious_gcode_13.gcode  malicious_gcode_14.gcode  malicious_gcode_15.gcode  malicious_gcode_16.gcode  malicious_gcode_17.gcode  malicious_gcode_18.gcode  malicious_gcode_19.gcode  malicious_gcode_20.gcode  malicious_gcode_mixed_1.gcode  malicious_gcode_mixed_10.gcode  malicious_gcode_mixed_11.gcode  malicious_gcode_mixed_12.gcode  malicious_gcode_mixed_13.gcode  malicious_gcode_mixed_14.gcode  malicious_gcode_mixed_15.gcode  malicious_gcode_mixed_16.gcode  malicious_gcode_mixed_17.gcode  malicious_gcode_mixed_18.gcode  malicious_gcode_mixed_19.gcode  malicious_gcode_mixed_2.gcode  malicious_gcode_mixed_20.gcode  malicious_gcode_mixed_21.gcode  malicious_gcode_mixed_22.gcode  malicious_gcode_mixed_3.gcode  malicious_gcode_mixed_4.gcode  malicious_gcode_mixed_5.gcode  malicious_gcode_mixed_6.gcode  malicious_gcode_mixed_7.gcode  (+2 more)
files/gcode/output/: experiment-1-invalid-Gcode-output  experiment-1-valid-Gcode-output  experiment-2-benign-Gcode-output  experiment-2-malicious-Gcode-output
files/gcode/tests/M107/: M107_invalid_gcode.gcode  M107_valid_gcode.gcode
files/gcode/valid/: marlin-gcodes.gcode
include/: Conditionals_LCD.h  Configuration.h  Configuration_adv.h  language.h  parser.h  types.h
src/: main.cpp  parser.cpp
src/gcode-file-reader/: GCodeFileReader.cpp  GCodeFileReader.h
src/malicious-gcode-detector/: GCodeSecurity.cpp  GCodeSecurity.h  GCodeSecurityDispatcher.cpp  GCodeSecurityDispatcher.h
src/malicious-gcode-detector/temp/: M104.cpp  M104.h  TemperatureSecurity.cpp  TemperatureSecurity.h
src/malicious-gcode-detector/temp/M104_M109/: M104_M109.cpp
src/malicious-gcode-detector/temp/M106/: M106.cpp
src/malicious-gcode-detector/temp/M107/: M107.cpp
src/malicious-gcode-detector/temp/M140/: M140.cpp
src/malicious-gcode-detector/temp/M141/: M141.cpp
src/malicious-gcode-detector/temp/M143_M193/: M143_M193.cpp
src/malicious-gcode-detector/temp/M190/: M190.cpp
src/malicious-gcode-detector/temp/M191/: M191.cpp
src/malicious-gcode-detector/temp/M303/: M303.cpp
src/malicious-gcode-detector/temp/M306/: M306.cpp
src/malicious-gcode-detector/temp/M710/: M710.cpp
src/malicious-gcode-detector/temp/thermal-state/: ThermalState.cpp  ThermalState.h
